callout: fix issue with z order instead of overflow

--- a/callouts.css
+++ b/callouts.css
@@ -57,6 +57,8 @@
     padding: 5px 5px 0px 5px;
     border: thin solid black;
     border-radius: 5px;
+    position: relative;
+    z-index: 1;
 }
 
 .callout:is([data-callout-metadata*="portrait-right"]) .callout-title {
