--- a/lists.css
+++ b/lists.css
@@ -1,8 +1,3 @@
-/* Hide overflow from lists so that it doesn't overlay floats */
-ol, ul {
-    overflow: hidden;
-}
-
 /*
  * Optionally stripe ul lists
  */
